tests/accept/global.ul
int foo() {
    return 1;
}

int bar() {
   return 1; 
}

void main() {

}