tests/reject/bad_assign_2.ul
void main() {
     string s;
     s = 1;
}